# editor

./: .clangformat  .gitignore  CMakeLists.txt
resources/: text.txt
src/: AppWindow.cpp  AppWindow.h  TextRenderer.cpp  TextRenderer.h  appwindow.cpp  appwindow.h  main.cpp
src/handler/: EventHandler.cpp  EventHandler.h  InsertModeHandler.cpp  InsertModeHandler.h  NormalModeHandler.cpp  NormalModeHandler.h  eventhandler.cpp  eventhandler.h  insertmodehandler.cpp  insertmodehandler.h  normalmodehandler.cpp  normalmodehandler.h
src/render/: Line.cpp  Line.h  TextRenderer.cpp  TextRenderer.h  cursor.cpp  cursor.h  line.cpp  line.h  textrenderer.cpp  textrenderer.h
src/util/: NotImplementedYetException.cpp  constants.h  file_helper.cpp  file_helper.h  fontmanager.cpp  fontmanager.h  helper.cpp  helper.h  models.h  notimplementedyetexception.cpp  notimplementedyetexception.h  string_helper.h
